--- a/Audio.html
+++ b/Audio.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Adding Html Audio</h1>
     <audio src="audio.mp3" controls autoplay loop></audio>
-    <video src= "video.mp4" controls autoplay height="300" width="300" poster="poster.png"></video> <br> <br>
+    <video src= "video.mp4" controls height="300" width="300" poster="poster.png"></video> <br> <br>
     <a href="index.html">Go Back</a>
 </body>
+
 </html>
