--- a/wanted.html
+++ b/wanted.html
@@ -12,11 +12,13 @@
     <input type="text" placeholder="Type your first name" required> <br> <br>
     </label>LAST NAME</label>
     <input type="text" placeholder="Type your last name" required="" id=""> <br> <br> 
-<label for="">GENDER</label>    
-<input type="radio" name="a">
-<label for="">Male</label>
-<input type="radio" name="a">
-<label for="">Female</label> <br> <br>
+        <label for="">GENDER</label>
+        <input type="radio" name="a">
+        <label for="">Male</label>
+        <input type="radio" name="a">
+        <label for="">Female</label> 
+        <input type="radio" name="a">
+        <label for="">other</label> <br> <br>
 <input type="submit" value="submit form">
 </form>
 <h4>feel free contact me on whatsapp</h4>
@@ -27,4 +29,5 @@
 <p>All rights Reserved</p> <br> <br>
 <a href="index.html">Go Back</a>
 </body>
+
 </html>
